fix fee computation
- compute fees per hop
- fees for first hop are not paid
- show fees for first hop