@@ -4,14 +4,14 @@ import de.cotto.lndmanagej.pickhardtpayments.model.MultiPathPayment;
 import de.cotto.lndmanagej.pickhardtpayments.model.Route;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 public record MultiPathPaymentDto(
         String amountSat,
         double probability,
         String feesMilliSat,
+        String feesWithFirstHopMilliSat,
         long feeRate,
+        long feeRateWithFirstHop,
         List<RouteDto> routes
 ) {
     public static MultiPathPaymentDto fromModel(MultiPathPayment multiPathPayment) {
@@ -19,12 +19,14 @@ public record MultiPathPaymentDto(
                 String.valueOf(multiPathPayment.amount().satoshis()),
                 multiPathPayment.probability(),
                 String.valueOf(multiPathPayment.fees().milliSatoshis()),
+                String.valueOf(multiPathPayment.feesWithFirstHop().milliSatoshis()),
                 multiPathPayment.getFeeRate(),
+                multiPathPayment.getFeeRateWithFirstHop(),
                 getRoutes(multiPathPayment.routes())
         );
     }
 
-    private static List<RouteDto> getRoutes(Set<Route> routes) {
-        return routes.stream().map(RouteDto::fromModel).collect(Collectors.toList());
+    private static List<RouteDto> getRoutes(List<Route> routes) {
+        return routes.stream().map(RouteDto::fromModel).toList();
     }
 }
